RESOLVED FIXED 284663
[Navigation API] NavigationHistoryEntry JS wrapper is not kept alive until the dispose event is fired
https://bugs.webkit.org/show_bug.cgi?id=284663
Summary [Navigation API] NavigationHistoryEntry JS wrapper is not kept alive until th...
Chris Dumez
Reported 2024-12-13 14:53:13 PST
When a NavigationHistoryEntry object gets removed from a Navigation object, a `dispose` event is dispatched on the NavigationHistoryEntry. However, NavigationHistoryEntry was not an ActiveDOMObject and therefore nothing was keeping its JS wrapper alive alive as long as a `dispose` event could get dispatched. This would lead to flaky crashes in the tests, when dispatching the event.
Attachments
Chris Dumez
Comment 1 2024-12-13 14:56:56 PST
EWS
Comment 2 2024-12-14 10:04:37 PST
Committed 287839@main (4016aa647924): <https://commits.webkit.org/287839@main> Reviewed commits have been landed. Closing PR #37945 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-14 10:05:15 PST
Note You need to log in before you can comment on or make changes to this bug.