Source/WebCore/page/NavigationHistoryEntry.h
@@ -25,7 +25,7 @@
 
 #pragma once
 
-#include "ContextDestructionObserver.h"
+#include "ActiveDOMObject.h"
 #include "EventHandler.h"
 #include "EventTarget.h"
 #include "HistoryItem.h"
@@ -38,16 +38,17 @@ class JSValue;
 
 namespace WebCore {
 
+class Navigation;
 class SerializedScriptValue;
 
-class NavigationHistoryEntry final : public RefCounted<NavigationHistoryEntry>, public EventTarget, public ContextDestructionObserver {
+class NavigationHistoryEntry final : public RefCounted<NavigationHistoryEntry>, public EventTarget, public ActiveDOMObject {
     WTF_MAKE_TZONE_OR_ISO_ALLOCATED(NavigationHistoryEntry);
 public:
-    using RefCounted<NavigationHistoryEntry>::ref;
-    using RefCounted<NavigationHistoryEntry>::deref;
+    static Ref<NavigationHistoryEntry> create(Navigation&, Ref<HistoryItem>&&);
+    static Ref<NavigationHistoryEntry> create(Navigation&, const NavigationHistoryEntry&);
 
-    static Ref<NavigationHistoryEntry> create(ScriptExecutionContext*, Ref<HistoryItem>&&);
-    static Ref<NavigationHistoryEntry> create(ScriptExecutionContext*, const NavigationHistoryEntry&);
+    void ref() const final { RefCounted::ref(); }
+    void deref() const final { RefCounted::deref(); }
 
     const String& url() const;
     String key() const;
@@ -60,6 +61,7 @@ public:
     SerializedScriptValue* state() const { return m_state.get(); }
 
     HistoryItem& associatedHistoryItem() const { return m_associatedHistoryItem; }
+    void dispatchDisposeEvent();
 
 private:
     struct DocumentState {
@@ -69,19 +71,27 @@ private:
         ReferrerPolicy referrerPolicy { ReferrerPolicy::Default };
     };
 
-    NavigationHistoryEntry(ScriptExecutionContext*, const DocumentState&, Ref<HistoryItem>&&, String urlString, WTF::UUID key, RefPtr<SerializedScriptValue>&& state = { }, WTF::UUID = WTF::UUID::createVersion4());
+    NavigationHistoryEntry(Navigation&, const DocumentState&, Ref<HistoryItem>&&, String urlString, WTF::UUID key, RefPtr<SerializedScriptValue>&& state = { }, WTF::UUID = WTF::UUID::createVersion4());
 
+    // ActiveDOMObject.
+    bool virtualHasPendingActivity() const;
+
+    // EventTarget.
     enum EventTargetInterfaceType eventTargetInterface() const final;
     ScriptExecutionContext* scriptExecutionContext() const final;
     void refEventTarget() final { ref(); }
     void derefEventTarget() final { deref(); }
+    void eventListenersDidChange() final;
 
+    WeakPtr<Navigation, WeakPtrImplWithEventTargetData> m_navigation;
     const String m_urlString;
     const WTF::UUID m_key;
     const WTF::UUID m_id;
     RefPtr<SerializedScriptValue> m_state;
     Ref<HistoryItem> m_associatedHistoryItem;
     DocumentState m_originalDocumentState;
+    bool m_hasDisposeEventListener { false };
+    bool m_hasDispatchedDisposeEvent { false };
 };
 
 } // namespace WebCore
